# hoseo_meet

./: .coverage  .env  .gitignore  README.md  docker-compose.db.yml  docker-compose.integracy.yml  docker-compose.prod.yml  docker-compose.web.yml  docker-compose.yml  nginx.conf  prometheus.yml  queries.yml  test.sh
backend/: .coverage  .coveragerc  Dockerfile  alembic.ini  celerybeat-schedule  detailed_lint_changes.txt  last_rental_data.csv  profile.html  profile.speedscope.json  pyproject.toml  room_data.csv  room_to_postgresql.py
backend/app/: main.py  middlewares.py  tests_pre_start.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 13a5f2ae708a_.py  1b294f4069c9_init.py  6698d72e2b56_create_meetpost_model.py  74220a074f3a_add_date.py  (+1 more)
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py  (+11 more)
backend/app/celery/: event_email_task.py  event_fcm_task.py  story_post_task.py  tasks.py  worker.py
backend/app/core/: config.py  db.py  exceptions.py  metrics.py  redis.py  s3.py  security.py
backend/app/crud/: base.py  meet_post_crud.py  message.py  recipient.py  story_post.py  stream.py  user.py  user_crud.py
backend/app/email-templates/: new_register.html
backend/app/models/: __init__.py  meet_post.py  message.py  recipient.py  room_post.py  story_post.py  stream.py  user.py
backend/app/schemas/: auth.py  common.py  event.py  meet_post.py  meet_post_schemas.py  message.py  recipient.py  room_post.py  story_post.py  stream.py  user.py
backend/app/scripts/: create_test_users.py  lint.sh  test.sh  tests-start.sh
backend/app/service/: auth.py  email.py  events.py  jwt_token.py  kakao_oauth.py  location.py  meet_post.py  meet_post_service.py  message.py  room_post.py  story_post.py  stream.py  user.py  websocket_connection.py
backend/app/tests/: conftest.py
backend/app/utils/: date.py  email.py  image.py  s3.py
(+240 files in other folders)
