[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["11kkw <11kkw@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
sqlmodel = "^0.0.21"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"
databases = {extras = ["asyncpg"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
