[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["11kkw <11kkw@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.34"}
alembic = "^1.13.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
sqlmodel = "^0.0.21"
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"
databases = {extras = ["asyncpg"], version = "^0.9.0"}
psycopg2-binary = "^2.9.9"
psycopg = {extras = ["binary"], version = "^3.2.1"}
mypy = "^1.11.2"
ruff = "^0.6.3"
tenacity = "^9.0.0"
pytest = "^8.3.2"
fastapi-mail = "^1.4.1"
jinja2 = "^3.1.4"
httpx = "^0.27.2"
sqlalchemy-utils = "^0.41.2"
aiosqlite = "^0.20.0"
aioredis = "^2.0.1"
trio = "^0.26.2"
apscheduler = "^3.10.4"
celery = {extras = ["redis"], version = "^5.4.0"}
locust = "^2.31.8"
pyfcm = "^2.0.7"
passlib = "^1.7.4"
httpx-oauth = "^0.15.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"